GEODE-10235: fix --maxHeap for java 17 (#7585)
* --maxHeap no longer forces CMS if the java version is 14 or later. It was in 14 that CMS was dropped from the JVM. 

* product code now uses SystemUtils to determine java version instead of system property
tests now use junit5 EnabledForJreRange to determine java version instead of system property
fixed some other tests that were broken in jdk17 by this change