@@ -16,10 +16,14 @@
 
 package org.apache.geode.management.internal.cli.commands;
 
+import static java.util.Arrays.asList;
+import static java.util.Collections.emptyList;
+import static java.util.Collections.singletonList;
+import static org.apache.geode.management.internal.cli.commands.MemberJvmOptions.CMS_INITIAL_OCCUPANCY_FRACTION;
+import static org.apache.geode.management.internal.cli.commands.MemberJvmOptions.getGcJvmOptions;
 import static org.apache.geode.management.internal.cli.commands.MemberJvmOptions.getMemberJvmOptions;
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -38,11 +42,32 @@ class MemberJvmOptionsTest {
   @Test
   @EnabledForJreRange(min = JRE.JAVA_11)
   void java11Options() {
-    List<String> expectedOptions = Arrays.asList(
+    List<String> expectedOptions = asList(
         "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
         "--add-exports=java.management/com.sun.jmx.remote.security=ALL-UNNAMED");
 
     assertThat(getMemberJvmOptions())
         .containsExactlyElementsOf(expectedOptions);
   }
+
+  @Test
+  @EnabledForJreRange(max = JRE.JAVA_13)
+  void cmsOptions() {
+    assertThat(getGcJvmOptions(emptyList())).containsExactly("-XX:+UseConcMarkSweepGC",
+        "-XX:CMSInitiatingOccupancyFraction=" + CMS_INITIAL_OCCUPANCY_FRACTION);
+    List<String> commandLine = singletonList("-XX:+UseConcMarkSweepGC");
+    assertThat(getGcJvmOptions(commandLine))
+        .containsExactly("-XX:CMSInitiatingOccupancyFraction=" + CMS_INITIAL_OCCUPANCY_FRACTION);
+    commandLine = singletonList("-XX:CMSInitiatingOccupancyFraction=");
+    assertThat(getGcJvmOptions(commandLine)).containsExactly("-XX:+UseConcMarkSweepGC");
+    commandLine = asList("-XX:+UseConcMarkSweepGC", "-XX:CMSInitiatingOccupancyFraction=");
+    assertThat(getGcJvmOptions(commandLine)).isEmpty();
+  }
+
+  @Test
+  @EnabledForJreRange(min = JRE.JAVA_14)
+  void noCmsOptions() {
+    assertThat(getGcJvmOptions(emptyList())).isEmpty();
+  }
+
 }
